--- a/src/Searcher.scss
+++ b/src/Searcher.scss
@@ -3,6 +3,10 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background: #4e54c8;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8f94fb, #4e54c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 }
 
 h1,
@@ -17,44 +21,63 @@ p {
 }
 
 .searcher {
-    border: 1px solid gray;
     width: fit-content;
     border-radius: 10px;
     width: 500px;
-
+    background-color: white;
+    box-shadow: 0 0 80px #7B81EC;
     &__top {
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        background-color: rgb(15, 53, 223);
-        padding: 20px 30px;
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+        background-color: #0077FF;
+        padding: 30px 30px;
         font-family: sans-serif;
 
         h1 {
-            font-size: 32px;
+            font-size: 28px;
             color: white;
         }
 
         p {
             color: rgb(192, 192, 192);
             margin: 5px 0 30px 0;
+            font-size: 14px;
         }
 
         input {
             border-radius: 20px;
             border: 0;
-            padding: 10px 80px 10px 10px;
+            padding: 15px 100px 15px 25px;
+            &:focus{
+                outline: none;
+            }
         }
     }
 
     &__content {
-        padding: 20px 30px;
         height: 500px;
         overflow-y: scroll;
-
+        border-radius: 10px;
+        overflow-x: hidden;
+        padding: 0 0 20px 0;
         &__person {
+            border-bottom: 1px solid rgb(192, 192, 192);
+            cursor: pointer;
+            align-items: center;
+            font-family: sans-serif;
             display: flex;
             gap: 30px;
-            padding-bottom: 30px;
+            padding: 15px 30px 15px 30px;
+            transition: .4s;
+
+            h4 {
+                font-size: 15px;
+            }
+
+            h2 {
+                font-size: 20px;
+                margin-bottom: 8px;
+            }
 
             &__image {
                 border-radius: 50%;
@@ -62,10 +85,16 @@ p {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-
                 img {
                     border-radius: 50%;
                 }
+            }
+
+            &:hover {
+                color: white;
+                transform: scale(1.065);
+                transition: .4s;
+                background-color: #0077FF;
             }
         }
     }
